--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcsh 'Motorboats -- Juvenile fiction'
 - !lcc 'PZ'
 - !lcsh 'Sea stories'
+- GITenberg
 title: The Motor Boys on the Atlantic; or, The Mystery of the Lighthouse
 url: http://www.gutenberg.org/ebooks/44846
